--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
     <img src="images/ds-logo.png">
   </div>
   <div class="blacksection">
-    <h1>technology<br>meets<br>creativity</h1>
+    <h1><br>경재원<br>B511005</h1>
   </div>
 </section>
 <a href="#Services" class="mscroll"><img src="images/mouse-icon.png" alt="mouse icon"></a>
